SqlPlusDbSync.Platform/Syntax/.antlr/DbObjectsParser.java
// Generated from c:\Users\n.zenkov\Documents\DEV_ASNA\ASNA\Devs\SqlPlusDbSync\SqlPlusDbSync\SqlPlusDbSync.Platform\Syntax\DbObjects.g4 by ANTLR 4.7
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DbObjectsParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		EQUALS_SYMBOL=1, MORE_THAN=2, LESS_THAN=3, NOT_EQUALS=4, MINUS=5, IN=6, 
		EQUALS=7, NEWLINE=8, SPACE=9, TABS=10, POINTER=11, SEMICOLON=12, DOUBLE_QUOTION=13, 
		QUOTION=14, EXCLAMATION=15, STAR=16, AT=17, Comma=18, Dot=19, DoubleDot=20, 
		ALL=21, DEFINE=22, OBJECT=23, AS=24, TABLE=25, AND=26, ON=27, AFTER=28, 
		REL=29, WITH=30, TYPE=31, WHERE=32, UNIQUE=33, REFERENCES=34, OPTIONS=35, 
		DIRECTION=36, UP=37, DOWN=38, TRANSFER_TIME=39, MIN=40, HOUR=41, DAY=42, 
		SESSION=43, EVERY=44, TRANSFER=45, POINT=46, JOIN=47, VALUE=48, FROM=49, 
		INCLUDE=50, EXCLUDE=51, LOAD=52, BEFORE=53, SAVE=54, EVENTS=55, CREATE=56, 
		DELETE=57, UPDATE=58, INVOKE=59, CASCADE=60, ERROR=61, BEGIN_INVOKE=62, 
		END_INVOKE=63, REL_TYPE=64, RELATIONID=65, LeftBracket=66, RightBracket=67, 
		LeftSquadBracket=68, RightSquadBracket=69, Dollar=70, ID=71, NUMBER=72, 
		COMMENT=73;
	public static final int
		RULE_eval = 0, RULE_definitions = 1, RULE_pointDefinition = 2, RULE_objectDefinitionTable = 3, 
		RULE_objectDefinitionObject = 4, RULE_tableExpression = 5, RULE_uniqueExpression = 6, 
		RULE_includeExpression = 7, RULE_excludeExpression = 8, RULE_pointExpression = 9, 
		RULE_objectPoints = 10, RULE_objectRelations = 11, RULE_objectRelation = 12, 
		RULE_objectEvents = 13, RULE_objectEventsTypes = 14, RULE_objectBeforeEvent = 15, 
		RULE_objectOnEvent = 16, RULE_objectAfterEvent = 17, RULE_afterLoadStatement = 18, 
		RULE_beforeSaveStatement = 19, RULE_afterUpdateStatement = 20, RULE_afterCreateStatement = 21, 
		RULE_afterDeleteStatement = 22, RULE_onErrorStatement = 23, RULE_onUpdateStatement = 24, 
		RULE_onCreateStatement = 25, RULE_onDeleteStatement = 26, RULE_updateAllReferencesStatement = 27, 
		RULE_deleteCascadeStatement = 28, RULE_invokeStatement = 29, RULE_invokeBodyStatement = 30, 
		RULE_invokeBeginStatement = 31, RULE_invokeEndStatement = 32, RULE_objectOptions = 33, 
		RULE_directionOptions = 34, RULE_transferTimeOptions = 35, RULE_join = 36, 
		RULE_fieldExpression = 37, RULE_whereExpression = 38, RULE_compareOperatorExpression = 39, 
		RULE_valueExpression = 40, RULE_numberArrayExpression = 41, RULE_columnList = 42, 
		RULE_tableName = 43, RULE_fieldName = 44, RULE_onFieldName = 45, RULE_valueFieldName = 46, 
		RULE_objectList = 47, RULE_objectDefinitionName = 48, RULE_objectName = 49, 
		RULE_pointName = 50;
	public static final String[] ruleNames = {
		"eval", "definitions", "pointDefinition", "objectDefinitionTable", "objectDefinitionObject", 
		"tableExpression", "uniqueExpression", "includeExpression", "excludeExpression", 
		"pointExpression", "objectPoints", "objectRelations", "objectRelation", 
		"objectEvents", "objectEventsTypes", "objectBeforeEvent", "objectOnEvent", 
		"objectAfterEvent", "afterLoadStatement", "beforeSaveStatement", "afterUpdateStatement", 
		"afterCreateStatement", "afterDeleteStatement", "onErrorStatement", "onUpdateStatement", 
		"onCreateStatement", "onDeleteStatement", "updateAllReferencesStatement", 
		"deleteCascadeStatement", "invokeStatement", "invokeBodyStatement", "invokeBeginStatement", 
		"invokeEndStatement", "objectOptions", "directionOptions", "transferTimeOptions", 
		"join", "fieldExpression", "whereExpression", "compareOperatorExpression", 
		"valueExpression", "numberArrayExpression", "columnList", "tableName", 
		"fieldName", "onFieldName", "valueFieldName", "objectList", "objectDefinitionName", 
		"objectName", "pointName"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'='", "'>'", "'<'", "'<>'", "'-'", null, null, null, "' '", "'\t'", 
		"'^'", "';'", "'\"'", "'''", "'!'", "'*'", "'@'", "','", "'.'", "':'", 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, "'('", "')'", "'['", 
		"']'", "'$'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "EQUALS_SYMBOL", "MORE_THAN", "LESS_THAN", "NOT_EQUALS", "MINUS", 
		"IN", "EQUALS", "NEWLINE", "SPACE", "TABS", "POINTER", "SEMICOLON", "DOUBLE_QUOTION", 
		"QUOTION", "EXCLAMATION", "STAR", "AT", "Comma", "Dot", "DoubleDot", "ALL", 
		"DEFINE", "OBJECT", "AS", "TABLE", "AND", "ON", "AFTER", "REL", "WITH", 
		"TYPE", "WHERE", "UNIQUE", "REFERENCES", "OPTIONS", "DIRECTION", "UP", 
		"DOWN", "TRANSFER_TIME", "MIN", "HOUR", "DAY", "SESSION", "EVERY", "TRANSFER", 
		"POINT", "JOIN", "VALUE", "FROM", "INCLUDE", "EXCLUDE", "LOAD", "BEFORE", 
		"SAVE", "EVENTS", "CREATE", "DELETE", "UPDATE", "INVOKE", "CASCADE", "ERROR", 
		"BEGIN_INVOKE", "END_INVOKE", "REL_TYPE", "RELATIONID", "LeftBracket", 
		"RightBracket", "LeftSquadBracket", "RightSquadBracket", "Dollar", "ID", 
		"NUMBER", "COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DbObjects.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DbObjectsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class EvalContext extends ParserRuleContext {
		public List<DefinitionsContext> definitions() {
			return getRuleContexts(DefinitionsContext.class);
		}
		public DefinitionsContext definitions(int i) {
			return getRuleContext(DefinitionsContext.class,i);
		}
		public EvalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eval; }
	}

	public final EvalContext eval() throws RecognitionException {
		EvalContext _localctx = new EvalContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_eval);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(102);
				definitions();
				}
				}
				setState(105); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==DEFINE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionsContext extends ParserRuleContext {
		public ObjectDefinitionTableContext objectDefinitionTable() {
			return getRuleContext(ObjectDefinitionTableContext.class,0);
		}
		public ObjectDefinitionObjectContext objectDefinitionObject() {
			return getRuleContext(ObjectDefinitionObjectContext.class,0);
		}
		public PointDefinitionContext pointDefinition() {
			return getRuleContext(PointDefinitionContext.class,0);
		}
		public DefinitionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definitions; }
	}

	public final DefinitionsContext definitions() throws RecognitionException {
		DefinitionsContext _localctx = new DefinitionsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definitions);
		try {
			setState(110);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(107);
				objectDefinitionTable();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(108);
				objectDefinitionObject();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(109);
				pointDefinition();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PointDefinitionContext extends ParserRuleContext {
		public TerminalNode DEFINE() { return getToken(DbObjectsParser.DEFINE, 0); }
		public TerminalNode POINT() { return getToken(DbObjectsParser.POINT, 0); }
		public PointNameContext pointName() {
			return getRuleContext(PointNameContext.class,0);
		}
		public TerminalNode FROM() { return getToken(DbObjectsParser.FROM, 0); }
		public TableNameContext tableName() {
			return getRuleContext(TableNameContext.class,0);
		}
		public TerminalNode ON() { return getToken(DbObjectsParser.ON, 0); }
		public OnFieldNameContext onFieldName() {
			return getRuleContext(OnFieldNameContext.class,0);
		}
		public TerminalNode VALUE() { return getToken(DbObjectsParser.VALUE, 0); }
		public ValueFieldNameContext valueFieldName() {
			return getRuleContext(ValueFieldNameContext.class,0);
		}
		public PointDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pointDefinition; }
	}

	public final PointDefinitionContext pointDefinition() throws RecognitionException {
		PointDefinitionContext _localctx = new PointDefinitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_pointDefinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(DEFINE);
			setState(113);
			match(POINT);
			setState(114);
			pointName();
			setState(115);
			match(FROM);
			setState(116);
			tableName();
			setState(117);
			match(ON);
			setState(118);
			onFieldName();
			setState(119);
			match(VALUE);
			setState(120);
			valueFieldName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObjectDefinitionTableContext extends ParserRuleContext {
		public TerminalNode DEFINE() { return getToken(DbObjectsParser.DEFINE, 0); }
		public TerminalNode OBJECT() { return getToken(DbObjectsParser.OBJECT, 0); }
		public ObjectDefinitionNameContext objectDefinitionName() {
			return getRuleContext(ObjectDefinitionNameContext.class,0);
		}
		public TerminalNode AS() { return getToken(DbObjectsParser.AS, 0); }
		public TerminalNode TABLE() { return getToken(DbObjectsParser.TABLE, 0); }
		public TableExpressionContext tableExpression() {
			return getRuleContext(TableExpressionContext.class,0);
		}
		public TerminalNode TRANSFER() { return getToken(DbObjectsParser.TRANSFER, 0); }
		public List<WhereExpressionContext> whereExpression() {
			return getRuleContexts(WhereExpressionContext.class);
		}
		public WhereExpressionContext whereExpression(int i) {
			return getRuleContext(WhereExpressionContext.class,i);
		}
		public ObjectEventsContext objectEvents() {
			return getRuleContext(ObjectEventsContext.class,0);
		}
		public ObjectOptionsContext objectOptions() {
			return getRuleContext(ObjectOptionsContext.class,0);
		}
		public ObjectDefinitionTableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objectDefinitionTable; }
	}

	public final ObjectDefinitionTableContext objectDefinitionTable() throws RecognitionException {
		ObjectDefinitionTableContext _localctx = new ObjectDefinitionTableContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_objectDefinitionTable);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(DEFINE);
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TRANSFER) {
				{
				setState(123);
				match(TRANSFER);
				}
			}

			setState(126);
			match(OBJECT);
			setState(127);
			objectDefinitionName();
			setState(128);
			match(AS);
			setState(129);
			match(TABLE);
			setState(130);
			tableExpression();
			setState(134);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WHERE) {
				{
				{
				setState(131);
				whereExpression();
				}
				}
				setState(136);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EVENTS) {
				{
				setState(137);
				objectEvents();
				}
			}

			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OPTIONS) {
				{
				setState(140);
				objectOptions();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObjectDefinitionObjectContext extends ParserRuleContext {
		public TerminalNode DEFINE() { return getToken(DbObjectsParser.DEFINE, 0); }
		public List<TerminalNode> OBJECT() { return getTokens(DbObjectsParser.OBJECT); }
		public TerminalNode OBJECT(int i) {
			return getToken(DbObjectsParser.OBJECT, i);
		}
		public ObjectDefinitionNameContext objectDefinitionName() {
			return getRuleContext(ObjectDefinitionNameContext.class,0);
		}
		public TerminalNode AS() { return getToken(DbObjectsParser.AS, 0); }
		public ObjectNameContext objectName() {
			return getRuleContext(ObjectNameContext.class,0);
		}
		public ObjectRelationsContext objectRelations() {
			return getRuleContext(ObjectRelationsContext.class,0);
		}
		public TerminalNode TRANSFER() { return getToken(DbObjectsParser.TRANSFER, 0); }
		public List<TerminalNode> LeftBracket() { return getTokens(DbObjectsParser.LeftBracket); }
		public TerminalNode LeftBracket(int i) {
			return getToken(DbObjectsParser.LeftBracket, i);
		}
		public List<TerminalNode> RightBracket() { return getTokens(DbObjectsParser.RightBracket); }
		public TerminalNode RightBracket(int i) {
			return getToken(DbObjectsParser.RightBracket, i);
		}
		public ObjectEventsContext objectEvents() {
			return getRuleContext(ObjectEventsContext.class,0);
		}
		public ObjectOptionsContext objectOptions() {
			return getRuleContext(ObjectOptionsContext.class,0);
		}
		public ObjectPointsContext objectPoints() {
			return getRuleContext(ObjectPointsContext.class,0);
		}
		public ObjectDefinitionObjectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objectDefinitionObject; }
	}

	public final ObjectDefinitionObjectContext objectDefinitionObject() throws RecognitionException {
		ObjectDefinitionObjectContext _localctx = new ObjectDefinitionObjectContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_objectDefinitionObject);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			match(DEFINE);
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TRANSFER) {
				{
				setState(144);
				match(TRANSFER);
				}
			}

			setState(147);
			match(OBJECT);
			setState(148);
			objectDefinitionName();
			setState(149);
			match(AS);
			setState(150);
			match(OBJECT);
			setState(154);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LeftBracket) {
				{
				{
				setState(151);
				match(LeftBracket);
				}
				}
				setState(156);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(157);
			objectName();
			setState(161);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==RightBracket) {
				{
				{
				setState(158);
				match(RightBracket);
				}
				}
				setState(163);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(164);
			objectRelations();
			setState(166);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EVENTS) {
				{
				setState(165);
				objectEvents();
				}
			}

			setState(169);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OPTIONS) {
				{
				setState(168);
				objectOptions();
				}
			}

			setState(172);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==POINT) {
				{
				setState(171);
				objectPoints();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TableExpressionContext extends ParserRuleContext {
		public TableNameContext tableName() {
			return getRuleContext(TableNameContext.class,0);
		}
		public TerminalNode LeftBracket() { return getToken(DbObjectsParser.LeftBracket, 0); }
		public TerminalNode RightBracket() { return getToken(DbObjectsParser.RightBracket, 0); }
		public UniqueExpressionContext uniqueExpression() {
			return getRuleContext(UniqueExpressionContext.class,0);
		}
		public List<IncludeExpressionContext> includeExpression() {
			return getRuleContexts(IncludeExpressionContext.class);
		}
		public IncludeExpressionContext includeExpression(int i) {
			return getRuleContext(IncludeExpressionContext.class,i);
		}
		public List<ExcludeExpressionContext> excludeExpression() {
			return getRuleContexts(ExcludeExpressionContext.class);
		}
		public ExcludeExpressionContext excludeExpression(int i) {
			return getRuleContext(ExcludeExpressionContext.class,i);
		}
		public List<PointExpressionContext> pointExpression() {
			return getRuleContexts(PointExpressionContext.class);
		}
		public PointExpressionContext pointExpression(int i) {
			return getRuleContext(PointExpressionContext.class,i);
		}
		public List<TerminalNode> Comma() { return getTokens(DbObjectsParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(DbObjectsParser.Comma, i);
		}
		public TableExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tableExpression; }
	}

	public final TableExpressionContext tableExpression() throws RecognitionException {
		TableExpressionContext _localctx = new TableExpressionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_tableExpression);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(174);
			tableName();
			setState(175);
			match(LeftBracket);
			setState(187);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(185);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
					case 1:
						{
						setState(176);
						includeExpression();
						}
						break;
					case 2:
						{
						setState(177);
						excludeExpression();
						}
						break;
					case 3:
						{
						setState(178);
						pointExpression();
						}
						break;
					case 4:
						{
						setState(179);
						match(Comma);
						setState(180);
						pointExpression();
						}
						break;
					case 5:
						{
						setState(181);
						match(Comma);
						setState(182);
						includeExpression();
						}
						break;
					case 6:
						{
						setState(183);
						match(Comma);
						setState(184);
						excludeExpression();
						}
						break;
					}
					} 
				}
				setState(189);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			}
			setState(196);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				{
				setState(190);
				uniqueExpression();
				}
				break;
			case 2:
				{
				{
				setState(191);
				match(Comma);
				setState(192);
				uniqueExpression();
				}
				}
				break;
			case 3:
				{
				{
				setState(193);
				uniqueExpression();
				setState(194);
				match(Comma);
				}
				}
				break;
			}
			setState(209);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Comma) | (1L << POINT) | (1L << INCLUDE) | (1L << EXCLUDE))) != 0)) {
				{
				setState(207);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
				case 1:
					{
					setState(198);
					includeExpression();
					}
					break;
				case 2:
					{
					setState(199);
					excludeExpression();
					}
					break;
				case 3:
					{
					setState(200);
					pointExpression();
					}
					break;
				case 4:
					{
					setState(201);
					match(Comma);
					setState(202);
					pointExpression();
					}
					break;
				case 5:
					{
					setState(203);
					match(Comma);
					setState(204);
					includeExpression();
					}
					break;
				case 6:
					{
					setState(205);
					match(Comma);
					setState(206);
					excludeExpression();
					}
					break;
				}
				}
				setState(211);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(212);
			match(RightBracket);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UniqueExpressionContext extends ParserRuleContext {
		public TerminalNode UNIQUE() { return getToken(DbObjectsParser.UNIQUE, 0); }
		public TerminalNode LeftBracket() { return getToken(DbObjectsParser.LeftBracket, 0); }
		public TerminalNode RightBracket() { return getToken(DbObjectsParser.RightBracket, 0); }
		public List<ColumnListContext> columnList() {
			return getRuleContexts(ColumnListContext.class);
		}
		public ColumnListContext columnList(int i) {
			return getRuleContext(ColumnListContext.class,i);
		}
		public UniqueExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_uniqueExpression; }
	}
